--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "dependencies": {
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
-      "express": "^4.17.1",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^5.9.1"
+      "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.0",
+      "mongoose": "^7.0.2",
+      "body-parser": "^1.20.2",
+        "mustache-express": "^1.3.2",
+    "express-jwt": "^8.4.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
     }
   }
   
