--- a/package.json
+++ b/package.json
@@ -4,27 +4,54 @@
     "description": "Node.js + MongoDB + ExpressJS + JWT",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
-      "node.js",
-      "express",
-      "jwt",
-      "mongodb"
+        "node.js",
+        "express",
+        "jwt",
+        "mongodb"
     ],
     "author": "@dovellous",
     "license": "ISC",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^7.0.2",
-      "body-parser": "^1.20.2",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.0.2",
+        "body-parser": "^1.20.2",
         "mustache-express": "^1.3.2",
-    "express-jwt": "^8.4.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+        "express-jwt": "^8.4.1",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "compression": "^1.7.4",
+        "dotenv": "^8.2.0",
+        "express-rate-limit": "^5.0.0",
+        "express-validation": "^1.0.3",
+        "helmet": "^3.21.2",
+        "joi": "^14.3.1",
+        "lodash": "^4.17.15",
+        "method-override": "^3.0.0",
+        "moment": "^2.24.0",
+        "passport": "^0.4.0",
+        "passport-jwt": "^4.0.0",
+        "redis": "^2.8.0",
+        "winston": "^3.2.1"
+    },
+    "devDependencies": {
+        "apidoc": "^0.17.7",
+        "chai": "^4.2.0",
+        "coveralls": "^3.0.7",
+        "cross-env": "^6.0.3",
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.18.2",
+        "husky": "^3.0.9",
+        "mocha": "^6.2.2",
+        "nodemon": "^1.19.4",
+        "nyc": "^14.1.1",
+        "sinon": "^7.5.0",
+        "supertest": "^4.0.2"
     }
-  }
-  
+}
