--- a/package.json
+++ b/package.json
@@ -10,7 +10,30 @@
         "node.js",
         "express",
         "jwt",
-        "mongodb"
+        "express",
+        "auth",
+        "oauth2",
+        "node",
+        "node.js",
+        "mongodb",
+        "mongoose",
+        "passport",
+        "es6",
+        "es7",
+        "es8",
+        "es2017",
+        "mocha",
+        "jest",
+        "istanbul",
+        "nyc",
+        "eslint",
+        "Travis CI",
+        "coveralls",
+        "REST",
+        "API",
+        "boilerplate",
+        "generator",
+        "starter project"
     ],
     "author": "@dovellous",
     "license": "ISC",
