--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
     "description": "Node.js + MongoDB + ExpressJS + JWT",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+        "precommit": "npm run lint && npm run test",
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "lint": "eslint '**/*.js' --ignore-pattern internals/scripts --ignore-path .gitignore",
+        "lint:fix": "npm run lint --fix",
+        "lint:watch": "npm run lint --watch",
+        "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --recursive tests/",
+        "test:unit": "cross-env NODE_ENV=test mocha tests/unit",
+        "test:integration": "cross-env NODE_ENV=test mocha --exit --timeout 20000 tests/integration",
+        "test:watch": "cross-env NODE_ENV=test nodemon --exec mocha -R min tests/integration",
+        "docs": "apidoc -i src -o docs",
+        "coverage": "nyc report --reporter=text-lcov | coveralls",
+        "prestart": "npm run docs",
+        "validate": "npm run lint && npm run test",
+        "docker:prod": "docker-compose up --build",
+        "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
+        "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
+      },
     "keywords": [
         "node.js",
         "express",
@@ -14,6 +30,7 @@
         "auth",
         "oauth2",
         "node",
+        "docker",
         "node.js",
         "mongodb",
         "mongoose",
