--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "docker:prod": "docker-compose up --build",
         "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
         "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
-      },
+    },
     "keywords": [
         "node.js",
         "express",
@@ -56,28 +56,36 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.2",
         "body-parser": "^1.20.2",
-        "mustache-express": "^1.3.2",
-        "express-jwt": "^8.4.1",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2",
         "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-jwt": "^8.4.1",
         "express-rate-limit": "^6.7.0",
         "express-validation": "^4.1.0",
+        "faker": "^6.6.6",
+        "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
         "joi": "^17.8.4",
+        "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
         "method-override": "^3.0.0",
         "moment": "^2.29.4",
+        "mongoose": "^7.0.2",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "mustache-express": "^1.3.2",
+        "mysql": "^2.18.1",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
+        "pdfkit": "^0.13.0",
         "redis": "^4.6.5",
-        "winston": "^3.8.2"
+        "winston": "^3.8.2",
+    "email-validator": "^2.0.4", 
+    "express-async-handler": "^1.1.4", 
+    "nodemailer": "^6.4.15",
+    "nodemon": "^2.0.6"
     },
     "devDependencies": {
         "apidoc": "^0.54.0",
