--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "description": "Node.js + MongoDB + ExpressJS + JWT",
     "main": "server.js",
     "scripts": {
+        "build": "npm run cleean && npm run lint && tsc",
         "precommit": "npm run lint && npm run test",
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
-        "lint": "eslint '**/*.js' --ignore-pattern internals/scripts --ignore-path .gitignore",
+        "lint": "eslint --ext .ts --fix '**/*.ts' --ignore-pattern internals/scripts --ignore-path .gitignore",
         "lint:fix": "npm run lint --fix",
         "lint:watch": "npm run lint --watch",
         "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --recursive tests/",
@@ -83,11 +84,17 @@
         "redis": "^4.6.5",
         "winston": "^3.8.2",
     "email-validator": "^2.0.4", 
-    "express-async-handler": "^1.1.4", 
-    "nodemailer": "^6.4.15",
-    "nodemon": "^2.0.6"
+    "express-async-handler": "^1.2.0", 
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.21"
     },
     "devDependencies": {
+        "@types/chai":"^4.3.4",
+        "@types/mocha":"^10.0.1",
+        "@types/node": "^18.15.3",
+        
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
+        "@typescript-eslint/parser": "^5.55.0",
         "apidoc": "^0.54.0",
         "chai": "^4.3.7",
         "coveralls": "^3.1.1",
@@ -100,6 +107,8 @@
         "nodemon": "^2.0.21",
         "nyc": "^15.1.0",
         "sinon": "^15.0.2",
-        "supertest": "^6.3.3"
+        "supertest": "^6.3.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.2"
     }
 }
