--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
+        "email-validator": "^2.0.4",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
         "express-jwt": "^8.4.1",
         "express-rate-limit": "^6.7.0",
         "express-validation": "^4.1.0",
@@ -76,24 +78,21 @@
         "moment": "^2.29.4",
         "mongoose": "^7.0.2",
         "morgan": "^1.10.0",
-        "multer": "^1.4.2",
+        "multer": "^1.4.5-lts.1",
         "mustache-express": "^1.3.2",
         "mysql": "^2.18.1",
+        "nodemailer": "^6.9.1",
+        "nodemon": "^2.0.21",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "pdfkit": "^0.13.0",
         "redis": "^4.6.5",
-        "winston": "^3.8.2",
-    "email-validator": "^2.0.4", 
-    "express-async-handler": "^1.2.0", 
-    "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.21"
+        "winston": "^3.8.2"
     },
     "devDependencies": {
-        "@types/chai":"^4.3.4",
-        "@types/mocha":"^10.0.1",
+        "@types/chai": "^4.3.4",
+        "@types/mocha": "^10.0.1",
         "@types/node": "^18.15.3",
-        
         "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@typescript-eslint/parser": "^5.55.0",
         "apidoc": "^0.54.0",
