--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-server-express-mongo-jwt",
     "version": "1.0.0",
     "description": "Node.js + MongoDB + ExpressJS + JWT",
-    "main": "server.js",
+    "main": "server.ts",
     "scripts": {
         "build": "npm run clean && npm run lint && tsc",
         "precommit": "npm run lint && npm run test",
