--- a/package.json
+++ b/package.json
@@ -57,21 +57,32 @@
     "author": "@dovellous",
     "license": "ISC",
     "dependencies": {
+        "ajv": "^6.12.4",
+        "axios": "^0.20.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
+        "check-ip-address": "^1.1.3",
+        "child_process": "^1.0.2",
         "compression": "^1.7.4",
+        "config-ini-parser": "^1.3.5",
         "cors": "^2.8.5",
+        "debug": "^4.1.1",
         "dotenv": "^16.0.3",
+        "ejs": "^3.1.5",
         "email-validator": "^2.0.4",
         "esm": "^3.2.25",
+        "events": "^3.2.0",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
         "express-jwt": "^8.4.1",
         "express-rate-limit": "^6.7.0",
         "express-validation": "^4.1.0",
         "faker": "^6.6.6",
+        "fs": "^0.0.1-security",
         "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
+        "https": "^1.0.0",
+        "ini": "^1.3.5",
         "joi": "^17.8.4",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
@@ -82,12 +93,18 @@
         "multer": "^1.4.5-lts.1",
         "mustache-express": "^1.3.2",
         "mysql": "^2.18.1",
+        "node-storage": "^0.0.9",
         "nodemailer": "^6.9.1",
         "nodemon": "^2.0.21",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
+        "path": "^0.12.7",
         "pdfkit": "^0.13.0",
+        "peer": "^0.5.3",
+        "qs": "^6.9.4",
         "redis": "^4.6.5",
+        "short-unique-id": "^3.0.4",
+        "socket.io": "^2.3.0",
         "winston": "^3.8.2"
     },
     "devDependencies": {
