--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "node-server-express-mongo-jwt",
     "version": "1.0.0",
     "description": "Node.js + MongoDB + ExpressJS + JWT",
-    "main": "server.ts",
+    "main": "src/server/index.ts",
     "scripts": {
         "build": "npm run clean && npm run lint && tsc",
         "precommit": "npm run lint && npm run test",
-        "start": "node src/server.js",
-        "start-server": "node server.ts",
-        "dev": "nodemon src/server.js",
+        "start": "node_modules/.bin/nodemon",
+        "start-server": "node src/server/index.ts",
+        "dev": "nodemon src/server/index.ts",
         "lint": "eslint --ext .ts --fix '**/*.ts' --ignore-pattern internals/scripts --ignore-path .gitignore",
         "lint:fix": "npm run lint --fix",
         "lint:watch": "npm run lint --watch",
