Created the Authentication module template

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "npm run clean && npm run lint && tsc",
         "precommit": "npm run lint && npm run test",
         "start": "node_modules/.bin/nodemon",
-        "start-server": "node src/server/index.ts",
+        "start-server": "nodemon src/server/index.ts",
         "dev": "nodemon src/server/index.ts",
         "lint": "eslint --ext .ts --fix '**/*.ts' --ignore-pattern internals/scripts --ignore-path .gitignore",
         "lint:fix": "npm run lint --fix",
@@ -96,7 +96,6 @@
         "mysql": "^2.18.1",
         "node-storage": "^0.0.9",
         "nodemailer": "^6.9.1",
-        "nodemon": "^2.0.21",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "path": "^0.12.7",
