--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build": "npm run clean && npm run lint && tsc",
         "precommit": "npm run lint && npm run test",
         "start": "node_modules/.bin/nodemon",
-        "start-server": "nodemon src/server/index.ts",
-        "dev": "nodemon src/server/index.ts",
+        "start-server": "nodemon src/server/index.js",
+        "dev": "ts-node src/server/index.js",
         "lint": "eslint --ext .ts --fix '**/*.ts' --ignore-pattern internals/scripts --ignore-path .gitignore",
         "lint:fix": "npm run lint --fix",
         "lint:watch": "npm run lint --watch",
