--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
+/frontend/node_modules
+/infra/node_modules
 /.pnp
 .pnp.js
 
@@ -9,7 +12,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .netlify
