--- a/package.json
+++ b/package.json
@@ -1,136 +1,12 @@
 {
-    "name": "node-server-express-mongo-jwt",
-    "version": "1.0.0",
-    "description": "Node.js + MongoDB + ExpressJS + JWT",
-    "main": "src/server/index.ts",
-    "types": "types/*/*.d.ts",
-    "scripts": {
-        "build": "npm run clean && npm run lint && tsc",
-        "precommit": "npm run lint && npm run test",
-        "start": "node_modules/.bin/nodemon",
-        "start-server": "nodemon src/server/index.js",
-        "dev": "ts-node src/server/index.js",
-        "lint": "eslint --ext .ts --fix '**/*.ts' --ignore-pattern internals/scripts --ignore-path .gitignore",
-        "lint:fix": "npm run lint --fix",
-        "lint:watch": "npm run lint --watch",
-        "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --recursive tests/",
-        "test:unit": "cross-env NODE_ENV=test mocha tests/unit",
-        "test:integration": "cross-env NODE_ENV=test mocha --exit --timeout 20000 tests/integration",
-        "test:watch": "cross-env NODE_ENV=test nodemon --exec mocha -R min tests/integration",
-        "docs": "apidoc -i src -o docs",
-        "coverage": "nyc report --reporter=text-lcov | coveralls",
-        "prestart": "node -v",
-        "validate": "npm run lint && npm run test",
-        "docker:prod": "docker-compose up --build",
-        "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit",
-        "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up"
-    },
-    "keywords": [
-        "node.js",
-        "express",
-        "jwt",
-        "express",
-        "auth",
-        "oauth2",
-        "node",
-        "docker",
-        "node.js",
-        "mongodb",
-        "mongoose",
-        "passport",
-        "es6",
-        "es7",
-        "es8",
-        "es2017",
-        "mocha",
-        "jest",
-        "istanbul",
-        "nyc",
-        "eslint",
-        "Travis CI",
-        "coveralls",
-        "REST",
-        "API",
-        "boilerplate",
-        "generator",
-        "starter project"
-    ],
-    "author": "@dovellous",
-    "license": "ISC",
+    "name": "fullstack-pulumi-mern-digitalocean",
+    "version": "0.0.1",
+    "private": true,
     "dependencies": {
-        "ajv": "^6.12.4",
-        "axios": "^0.20.0",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
-        "check-ip-address": "^1.1.3",
-        "child_process": "^1.0.2",
-        "compression": "^1.7.4",
-        "config-ini-parser": "^1.3.5",
-        "cors": "^2.8.5",
-        "debug": "^4.1.1",
-        "dotenv": "^16.0.3",
-        "ejs": "^3.1.5",
-        "email-validator": "^2.0.4",
-        "esm": "^3.2.25",
-        "events": "^3.2.0",
-        "express": "^4.18.2",
-        "express-async-handler": "^1.2.0",
-        "express-jwt": "^8.4.1",
-        "express-rate-limit": "^6.7.0",
-        "express-validation": "^4.1.0",
-        "faker": "^6.6.6",
-        "fs": "^0.0.1-security",
-        "fs-extra": "^11.1.0",
-        "helmet": "^6.0.1",
-        "https": "^1.0.0",
-        "ini": "^1.3.5",
-        "joi": "^17.8.4",
-        "jsonwebtoken": "^9.0.0",
-        "lodash": "^4.17.21",
-        "method-override": "^3.0.0",
-        "moment": "^2.29.4",
-        "mongoose": "^7.0.2",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "mustache-express": "^1.3.2",
-        "mysql": "^2.18.1",
-        "node-storage": "^0.0.9",
-        "nodemailer": "^6.9.1",
-        "passport": "^0.6.0",
-        "passport-jwt": "^4.0.1",
-        "path": "^0.12.7",
-        "pdfkit": "^0.13.0",
-        "peer": "^0.5.3",
-        "qs": "^6.9.4",
-        "redis": "^4.6.5",
-        "short-unique-id": "^3.0.4",
-        "sitka": "^1.0.6",
-        "socket.io": "^2.3.0",
-        "winston": "^3.8.2"
+        "concurrently": "^7.6.0"
     },
-    "devDependencies": {
-        "@babel/cli": "^7.21.0",
-        "@babel/core": "^7.21.3",
-        "@babel/preset-env": "^7.20.2",
-        "@types/chai": "^4.3.4",
-        "@types/mocha": "^10.0.1",
-        "@types/node": "^18.15.3",
-        "@typescript-eslint/eslint-plugin": "^5.55.0",
-        "@typescript-eslint/parser": "^5.55.0",
-        "apidoc": "^0.54.0",
-        "chai": "^4.3.7",
-        "coveralls": "^3.1.1",
-        "cross-env": "^7.0.3",
-        "eslint": "^8.36.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.27.5",
-        "husky": "^8.0.3",
-        "mocha": "^10.2.0",
-        "nodemon": "^2.0.21",
-        "nyc": "^15.1.0",
-        "sinon": "^15.0.2",
-        "supertest": "^6.3.3",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.0.2"
+    "scripts": {
+        "install": "npm -C frontend install && npm -C backend install",
+        "start": "concurrently 'npm -C backend run dev' 'npm -C frontend run dev'"
     }
 }
