--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "concurrently": "^7.6.0"
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.10",
+        "@types/react": "^18.0.29",
+        "@types/react-dom": "^18.0.11",
+        "concurrently": "^7.6.0",
+        "typescript": "^5.0.2"
     },
     "scripts": {
         "install": "npm -C frontend install && npm -C backend install",
