--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/core": "^3.13.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.10",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.13.1",
+    "axios": "^1.3.4",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-lazy-load": "^4.0.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "^5.0.1",
+    "react-sliding-pane": "^7.3.0",
+    "swiper": "^9.1.1",
     "typescript": "^5.0.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^3.3.0"
   },
   "scripts": {
