--- a/backend/package.json
+++ b/backend/package.json
@@ -76,7 +76,6 @@
         "mustache-express": "^1.3.2",
         "mysql": "^2.18.1",
         "nanoid": "^4.0.1",
-        "nodemon": "^2.0.22",
         "node-storage": "^0.0.9",
         "nodemailer": "^6.9.1",
         "passport": "^0.6.0",
@@ -124,7 +123,7 @@
         "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
         "dev2": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
         "build": "tsc",
-        "start": "ts-node src/index.ts"
+        "start": "npx ts-node src/index.ts"
     },
       "nodemonConfig": {
         "ext": "js",
