--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: infra
+name: dvs-mern-services
 runtime: nodejs
-description: A minimal DigitalOcean TypeScript Pulumi program
+description: A DigitalOcean TypeScript Pulumi Cluster - dvs-mern-services
