--- a/backend/package.json
+++ b/backend/package.json
@@ -67,6 +67,7 @@
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
+        "log-to-file": "^3.0.3",
         "lowdb": "^5.1.0",
         "method-override": "^3.0.0",
         "moment": "^2.29.4",
@@ -77,6 +78,7 @@
         "mustache-express": "^1.3.2",
         "mysql": "^2.18.1",
         "nanoid": "^4.0.1",
+        "node-color-log": "^10.0.2",
         "node-storage": "^0.0.9",
         "nodemailer": "^6.9.1",
         "passport": "^0.6.0",
@@ -90,7 +92,8 @@
         "sitka": "^1.0.6",
         "socket.io": "^4.6.1",
         "swagger-ui-express": "^4.6.2",
-        "winston": "^3.8.2"
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.0",
