--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -1,27 +1,32 @@
 {
     "name": "dvs-mern-deployer",
+    "description": "MongoDB + App + Cluster on Digital Ocean",
     "license": "MIT",
     "version": "1.0.0",
-    "description": "MongoDB + App + Cluster on Digital Ocean",
     "main": "index.ts",
     "devDependencies": {
         "@types/node": "^18"
     },
     "dependencies": {
+        "@pulumi/digitalocean": "^4.19.1",
         "@pulumi/pulumi": "^3.59.1",
-        "@pulumi/digitalocean": "^4.19.1"
+        "cross-var": "^1.1.0",
+        "dotenv-cli": "^7.1.0"
     },
     "scripts": {
-        "config-1": "pulumi config set service_instance_count 1",
-        "config-2": "pulumi config set service_instance_size 'basic-xxs'",
-        "config-3": "pulumi config set service_db_count 1",
-        "config-4": "pulumi config set service_db_engine 'mongodb'",
-        "config-5": "pulumi config set service_db_version '6'",
-        "config-6": "pulumi config set repo 'dovellous/node-server-express-mongo-jwt'",
-        "config-7": "pulumi config set branch 'main'",
-        "config-8": "pulumi config set services_name 'dvs-mern-stack-001'",
-        "configs" : "npm run config-1 && config-2 && config-3 && config-4 && config-5 && config-6 && config-7 && config-8",
-        "live": "pulumi up",
-        "destroy": "pulumi destroy"
+        "config-1": "dotenv cross-var pulumi config set service_instance_count %PULUMI_INSTANCE_COUNT%",
+        "config-2": "dotenv cross-var pulumi config set service_instance_size '%PULUMI_INSTANCE_SIZE%'",
+        "config-3": "dotenv cross-var pulumi config set service_db_count %PULUMI_DB_COUNT%",
+        "config-4": "dotenv cross-var pulumi config set service_db_engine '%PULUMI_DB_ENGINE%'",
+        "config-5": "dotenv cross-var pulumi config set service_db_version '%PULUMI_DB_VERSION%'",
+        "config-6": "dotenv cross-var pulumi config set repo '%PULUMI_REPO_NAME%'",
+        "config-7": "dotenv cross-var pulumi config set branch '%PULUMI_REPO_BRANCH%'",
+        "config-8": "dotenv cross-var pulumi config set services_name '%PULUMI_SERVICES_NAME%'",
+        "config-9": "dotenv cross-var DIGITALOCEAN_TOKEN=%DIGITALOCEAN_TOKEN%",
+        "configs" : "npm run config-1 && npm run config-2 && npm run config-3 && npm run config-4 && npm run config-5 && npm run config-6 && npm run config-7 && npm run config-8 && npm run config-9",
+        "live": "npm run configs && pulumi up",
+        "destroy": "pulumi destroy",
+        "start": "npm run live",
+        "kill": "npm run destroy"
     }
 }
