--- a/backend/package.json
+++ b/backend/package.json
@@ -126,7 +126,7 @@
     },
     "scripts": {
         "build": "tsc",
-        "start": "node bin/index.js",
+        "start": "node build/index.js",
         "dev": "npx ts-node src/index.ts",
         "dev2": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
     },
