--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,6 @@
     ],
     "author": "@dovellous",
     "dependencies": {
-        "@types/mongoose": "^5.11.97",
         "ajv": "^8.12.0",
         "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
@@ -74,6 +73,7 @@
         "moment": "^2.29.4",
         "mongodb": "^5.1.0",
         "mongoose": "^7.0.3",
+        "mongoose-plugin-autoinc": "^1.1.9",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "mustache-express": "^1.3.2",
@@ -90,6 +90,7 @@
         "qs": "^6.11.1",
         "redis": "^4.6.5",
         "short-unique-id": "^4.4.4",
+        "simple-mongoose-autoincrement": "^1.2.1",
         "sitka": "^1.0.6",
         "socket.io": "^4.6.1",
         "swagger-ui-express": "^4.6.2",
@@ -105,6 +106,7 @@
         "@types/express": "^4.17.17",
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.15.10",
+        "@types/mongoose": "^5.11.97",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
         "apidoc": "^0.54.0",
