--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,15 @@
 
 # dependencies
 /node_modules
+
+# IDE
+/.idea
+
+# dev folders
 /backend/node_modules
+/backend/logs
+/backend/build
+/backend/cert
 /frontend/node_modules
 /infra/node_modules
 /.pnp
