--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     ],
     "author": "@dovellous",
     "dependencies": {
+        "@types/crypto-js": "^4.1.1",
         "ajv": "^8.12.0",
         "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
@@ -47,6 +48,7 @@
         "compression": "^1.7.4",
         "config-ini-parser": "^1.6.1",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "debug": "^4.3.4",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
@@ -65,6 +67,7 @@
         "https": "^1.0.0",
         "ini": "^4.0.0",
         "joi": "^17.9.1",
+        "js-base64": "^3.7.5",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
         "log-to-file": "^3.0.3",
@@ -105,8 +108,8 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.15.10",
         "@types/mongoose": "^5.11.97",
+        "@types/node": "^18.15.10",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
         "apidoc": "^0.54.0",
