Update package.json - exclude buil, log and cert folders from commits

--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,15 @@
 /node_modules
 
 # IDE
-/.idea
+.idea
 
 # dev folders
-/backend/node_modules
-/backend/logs
-/backend/build
-/backend/cert
-/frontend/node_modules
-/infra/node_modules
+backend/node_modules
+backend/logs
+backend/build
+backend/cert
+frontend/node_modules
+infra/node_modules
 /.pnp
 .pnp.js
 
