--- a/backend/package.json
+++ b/backend/package.json
@@ -81,7 +81,7 @@
         "multer": "^1.4.5-lts.1",
         "mustache-express": "^1.3.2",
         "mysql": "^2.18.1",
-        "nanoid": "^4.0.1",
+        "nanoid": "^4.0.2",
         "node-color-log": "^10.0.2",
         "node-storage": "^0.0.9",
         "nodemailer": "^6.9.1",
@@ -96,38 +96,39 @@
         "simple-mongoose-autoincrement": "^1.2.1",
         "sitka": "^1.0.6",
         "socket.io": "^4.6.1",
-        "swagger-ui-express": "^4.6.2",
+        "swagger-autogen": "^2.23.1",
+        "swagger-express-router": "^1.0.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.0",
-        "@babel/core": "^7.21.3",
-        "@babel/preset-env": "^7.20.2",
+        "@babel/core": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
         "@types/chai": "^4.3.4",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
         "@types/mocha": "^10.0.1",
         "@types/mongoose": "^5.11.97",
-        "@types/node": "^18.15.10",
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
+        "@types/node": "^18.15.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "@typescript-eslint/parser": "^5.57.0",
         "apidoc": "^0.54.0",
         "chai": "^4.3.7",
         "coveralls": "^3.1.1",
         "cross-env": "^7.0.3",
-        "eslint": "^8.36.0",
+        "eslint": "^8.37.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
         "husky": "^8.0.3",
         "mocha": "^10.2.0",
-        "nodemon": "^2.0.21",
+        "nodemon": "^2.0.22",
         "nyc": "^15.1.0",
         "sinon": "^15.0.3",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.0.2"
+        "typescript": "^5.0.3"
     },
     "scripts": {
         "build": "tsc",
