Restructure directories, Add Swagger Autogen, Added Hardhat Project

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ frontend/logs
 frontend/build
 frontend/cert
 
+# hardhat dev folders
+hardhat/node_modules
+hardhat/.idea
+
 # infra dev folders
 pulumi/node_modules
 
