Completed the CLient CRUD Functions

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ node_modules
 # backend dev folders
 backend/node_modules
 backend/.idea
+backend/.env
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
 backend/logs
 backend/build
 backend/cert
@@ -18,6 +23,11 @@ backend/cert
 # frontend dev folders
 frontend/node_modules
 frontend/.idea
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 frontend/logs
 frontend/build
 frontend/cert
@@ -25,6 +35,11 @@ frontend/cert
 # hardhat dev folders
 hardhat/node_modules
 hardhat/.idea
+hardhat/.env
+hardhat/.env.local
+hardhat/.env.development.local
+hardhat/.env.test.local
+hardhat/.env.production.local
 
 # infra dev folders
 pulumi/node_modules
