--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,35 +1,226 @@
+
+
+
+
 {
-  "name": "hardhat-boilerplate",
+  "name": "dovellous-blockchain-boilerplat-template",
   "version": "1.0.0",
-  "description": "A boilerplate repository to get you started with Hardhat and Ethereum development",
-  "scripts": {
-    "deploy": "node scripts/deploy.js --network=localhost",
-    "compile": "npx hardhat compile",
-    "node": "npx hardhat node",
-    "test": "npx hardhat test"
-  },
+  "private": true,
+  "keywords": [
+    "smart contracts",
+    "bep20",
+    "erc20",
+    "erc721",
+    "erc1155",
+    "etherium",
+    "binance",
+    "solana",
+    "bitcoin",
+    "polygon",
+    "solidity",
+    "truffle",
+    "hardhat"
+  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NomicFoundation/hardhat-boilerplate.git"
+    "url": "git+https://github.com/dovellous/dvs-eth.git"
   },
-  "author": "Nomic Foundation",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NomicFoundation/hardhat-boilerplate/issues"
+  "author": {
+    "name": "Dovellous/@Code_Writer",
+    "email": "dovelous@gmail.com",
+    "url": "https://dovellous.com"
   },
-  "homepage": "https://github.com/NomicFoundation/hardhat-boilerplate#readme",
-  "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
+  "main": "src/index.tsx",
+  "dependencies": {
+    "0xsequence": "^0.43.21",
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@chainlink/contracts": "^0.6.1",
     "@ethersproject/providers": "^5.7.2",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.4",
+    "@faker-js/faker": "^7.6.0",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/providers": "^10.2.1",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
+    "@next/font": "13.2.4",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.8.2",
+    "@openzeppelin/contracts-upgradeable": "^4.8.2",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
+    "@popperjs/core": "^2.11.6",
+    "@project-serum/anchor": "^0.26.0",
+    "@redux-devtools/core": "^3.13.1",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@sanity/client": "^5.3.0",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/wallet-adapter-react": "^0.15.30",
+    "@solana/wallet-adapter-react-ui": "^0.9.29",
+    "@solana/wallet-adapter-wallets": "^0.19.15",
+    "@solana/web3.js": "^1.73.3",
+    "@tailwindcss/forms": "^0.5.3",
+    "@uniswap/sdk-core": "^3.2.2",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "@web3modal/ethereum": "^2.2.0",
+    "@web3modal/react": "^2.2.0",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
+    "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.2.1",
+    "console-table-printer": "^2.11.1",
+    "countdown-updated": "^2.7.0",
+    "crypto-browserify": "^3.12.0",
+    "cryptocurrency-icons": "^0.18.1",
+    "css-loader": "^6.7.3",
+    "cssnano": "^5.1.15",
+    "dotenv": "^16.0.3",
+    "ethereum-waffle": "^4.0.10",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^6",
+    "firebase": "^9.17.2",
+    "form-data": "^4.0.0",
+    "gh-pages": "^5.0.0",
+    "https-browserify": "^1.0.0",
+    "husky": "^8.0.3",
+    "infura-web3-provider": "^0.0.3",
+    "ipfs-http-client": "^60.0.0",
+    "javascript-time-ago": "^2.5.9",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "log4js": "^6.9.1",
+    "matchmedia-polyfill": "^0.3.2",
+    "mini-css-extract-plugin": "^2.7.3",
+    "moment": "^2.29.4",
+    "next": "13.2.4",
+    "next-iron-session": "^4.2.0",
+    "nft.storage": "^7.0.3",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.21",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "pinst": "^3.0.0",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-sliding-pane": "^7.3.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
+    "rtlcss": "^4.0.0",
+    "sf-font": "^1.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "solidity-coverage": "^0.8.2",
+    "style-loader": "^3.3.2",
+    "sweetalert2": "^11.7.3",
+    "swiper": "^9.1.0",
+    "swr": "^2.1.0",
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-custom-groups": "^1.1.2",
+    "tippy.js": "^6.3.7",
+    "ts-generator": "^0.1.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
+    "typescript": "^4.9.5",
+    "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.0",
+    "wagmi": "^0.12.1",
+    "web-vitals": "^3.3.0",
+    "web3modal": "^1.9.12",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.12.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^6.1.5",
+    "@types/chai": "^4.3.4",
+    "@types/jest": "^29.4.2",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.13.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "chai": "^4.3.7",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.12.5",
-    "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2"
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.1.0",
+    "dotenv": "^16.0.3",
+    "hardhat": "^2.13.0",
+    "hardhat-gas-reporter": "^1.0.9"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test":  "react-scripts test",
+    "eject": "react-scripts eject",
+    "hbuild": "yarn clean && yarn compile",
+    "hclean": "npx hardhat clean",
+    "hcompile": "npx hardhat compile",
+    "haccount": "npx hardhat accounts",
+    "hbalance": "npx hardhat balance --account",
+    "hliquidations": "npx hardhat run scripts/liquidations.ts",
+    "hblock-number": "npx hardhat block-number",
+    "hdeploy": "npx hardhat run scripts/deploy.ts --network=localhost",
+    "htest": "npx hardhat test",
+    "hcoverage": "npx hardhat coverage",
+    "postinstall": "husky install"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "packageManager": "yarn@3.2.1",
+  "lint-staged": {
+    "*.{js,json,md,sol,ts}": [
+      "prettier --config .prettierrc.json --write --ignore-unknown"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
