--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,56 @@
 {
-  "name": "dvs-mern-frontend",
-  "license": "MIT",
+  "name": "node-react-hardhat-pulumi-do-frontend",
   "version": "1.0.0",
-  "description": "ReactJS + Redux + Typescript",
   "private": true,
+  "keywords": [
+    "smart contracts",
+    "bep20",
+    "erc20",
+    "erc721",
+    "erc1155",
+    "etherium",
+    "binance",
+    "solana",
+    "bitcoin",
+    "polygon",
+    "solidity",
+    "truffle",
+    "hardhat"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dovellous/node-react-hardhat-pulumi-do.git"
+  },
+  "author": {
+    "name": "Dovellous/@Code_Writer",
+    "email": "dovelous@gmail.com",
+    "url": "https://dovellous.com"
+  },
   "dependencies": {
+    "0xsequence": "^0.43.25",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@chainlink/contracts": "^0.6.1",
+    "@ethersproject/providers": "^5.7.2",
+    "@faker-js/faker": "^7.6.0",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/providers": "^10.2.1",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
+    "@next/font": "13.2.4",
     "@redux-devtools/core": "^3.13.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.10",
+    "@types/node": "^18.15.11",
     "@types/node-sass": "^4.11.3",
-    "@types/react": "^18.0.29",
+    "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
     "@types/react-modal": "^3.13.1",
     "axios": "^1.3.4",
@@ -24,13 +61,90 @@
     "react-lazy-load": "^4.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-sliding-pane": "^7.3.0",
-    "swiper": "^9.1.1",
-    "typescript": "^5.0.2",
+    "swiper": "^9.2.0",
+    "typescript": "^5.0.3",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^3.3.0"
+    "web-vitals": "^3.3.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@uniswap/sdk-core": "^3.2.2",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.2.1",
+    "console-table-printer": "^2.11.1",
+    "countdown-updated": "^2.7.0",
+    "crypto-browserify": "^3.12.0",
+    "cryptocurrency-icons": "^0.18.1",
+    "css-loader": "^6.7.3",
+    "cssnano": "^6.0.0",
+    "dotenv": "^16.0.3",
+    "ethereum-waffle": "^4.0.10",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^6",
+    "firebase": "^9.19.1",
+    "form-data": "^4.0.0",
+    "gh-pages": "^5.0.0",
+    "https-browserify": "^1.0.0",
+    "husky": "^8.0.3",
+    "infura-web3-provider": "^0.0.3",
+    "ipfs-http-client": "^60.0.0",
+    "javascript-time-ago": "^2.5.9",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "log4js": "^6.9.1",
+    "matchmedia-polyfill": "^0.3.2",
+    "mini-css-extract-plugin": "^2.7.5",
+    "moment": "^2.29.4",
+    "next": "13.2.4",
+    "next-iron-session": "^4.2.0",
+    "nft.storage": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "pinst": "^3.0.0",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
+    "postcss-preset-env": "^8.3.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "react-bootstrap": "^2.7.2",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
+    "rtlcss": "^4.0.0",
+    "sf-font": "^1.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "solidity-coverage": "^0.8.2",
+    "style-loader": "^3.3.2",
+    "sweetalert2": "^11.7.3",
+    "swr": "^2.1.2",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-custom-groups": "^1.1.2",
+    "tippy.js": "^6.3.7",
+    "ts-generator": "^0.1.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
+    "uuid": "^9.0.0",
+    "wagmi": "^0.12.8",
+    "web3modal": "^1.9.12",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
