New app pipeline configs

--- a/pulumi/Pulumi.com-dovellous-stacke-000001.yaml
+++ b/pulumi/Pulumi.com-dovellous-stacke-000001.yaml
@@ -3,7 +3,7 @@ config:
   dvs-mern-services:repo: dovellous/node-react-hardhat-pulumi-do
   dvs-mern-services:service_db_count: "1"
   dvs-mern-services:service_db_engine: mongodb
-  dvs-mern-services:service_db_version: "6"
+  dvs-mern-services:service_db_version: "5"
   dvs-mern-services:service_instance_count: "1"
   dvs-mern-services:service_instance_size: basic-xxs
-  dvs-mern-services:services_name: dvs-mern-stack-001
+  dvs-mern-services:services_name: Dovellous-X1
