--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: dvs-mern-services
+name: com-enftis
 runtime: nodejs
-description: A DigitalOcean TypeScript Pulumi Cluster - dvs-mern-services
+description: Enftis MERN
