Fix Node version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,9 @@
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject"
   },
+  "engines" : { 
+    "node" : "18.15.0" 
+  },
   "dependencies": {
     "0xsequence": "^0.43.26",
     "@babel/core": "^7.21.4",
