--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "install-all": "npm -C frontend install && npm -C backend install && npm -C hardhat install && npm -C pulumi install",
         "start": "concurrently 'npm -C backend run dev2' 'npm -C frontend run start'",
         "undo-commit": "git push -f origin HEAD^:main",
-        "commit": "git add . && git commit -m 'Keep Calm And Commit' && git push --force"
+        "git-commit": "git add . && git commit -m 'Keep Calm And Commit' && git push --force",
+        "git-pull": "git reset --hard && git pull",
+        "git-push": "git push -f origin main"
     }
 }
